fixed scaling in the news pages for overflow scrolling and adjusted menu icon

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,12 +34,12 @@ nav{
 .nav__menu-bar{
   display: flex;
   flex-direction: column;
-  row-gap: 6px;
+  row-gap: 4px;
   cursor: pointer;
 }
 .nav__menu-bar div{
-  width: 40px;
-  height: 4px;
+  width: 30px;
+  height: 2px;
   background-color: rgb(201, 201, 201);
   border-radius: 2px;
 }
